fix: Fix hovered long request names still white in dark mode, close #4503

--- a/gatling-charts/src/main/resources/io/gatling/charts/assets/style/style.css
+++ b/gatling-charts/src/main/resources/io/gatling/charts/assets/style/style.css
@@ -376,6 +376,15 @@ h1 span {
 	margin: 0;
 }
 
+html[data-theme="dark"] div.popover {
+	background-color: var(--gatling-light-color);
+	border-bottom: none;
+}
+
+html[data-theme="dark"] div.popover.right .arrow {
+	border-right-color: var(--gatling-light-color);
+}
+
 .ellipsed-name {
 	display: block;
 
